--- a/style.css
+++ b/style.css
@@ -24,12 +24,10 @@ body {
 .container {
   background-color: var(--white);
   border-radius: 20px;
-  margin: 60px 30px 60px 30px;
+  margin: 60px auto;
   width: 340px;
-  margin-right: auto;
-  margin-left: auto;
   text-align: center;
-  box-shadow: 6px 6px 10px 0px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 25px 25px 0px rgba(0, 0, 0, 0.05);
 }
 
 .title {
